gcc/testsuite/rust/rustc/ui/rfcs/rfc-2126-extern-absolute-paths/non-existent-2.rs
// { dg-additional-options "-frust-edition=2018" }

fn main() {
    let s = ::xcrate::S;
// { dg-error ".E0433." "" { target *-*-* } .-1 }
}

